# snake

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile  random_point.cpp  random_point.h  snake  snake-game  snake.cpp  snake.h  snake1  snake_game.cpp  test.cpp  window.cpp  window.h  window.hpp
include/: snake.h  snake_part.h
make-old/: makefile
src/: main.cpp  random_point.cpp  snake.cpp  snake_part.cpp  window.cpp
